tests/frontend/fail/array/mismatched_array_shape.act
contract B

constructor()

creates

  int32[3][2] n2 := [[1,2],[3,4]]
